--- a/index.html
+++ b/index.html
@@ -16,44 +16,127 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <!-- Contenido de tu página va aquí -->
 
-    <div class="container">
-        <!-- Barra de navegación -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">Come Bien</a>
-        </nav>
+    <!-- Botón para abrir/cerrar el sidebar -->
+    <button class="btn btn-dark" onclick="toggleSidebar()">☰ Toggle Sidebar</button>
 
-        <!-- Contenido principal -->
-        <div class="mt-3">
-            <h1>Bienvenido a Come Bien - Verdulería</h1>
+    <!-- Sidebar -->
+    <div class="sidebar" id="sidebar">
+        <button class="btn btn-light" onclick="toggleSidebar()">✖ Close Sidebar</button>
+        <h2>Come Bien</h2>
+        <p>Verdulería</p>
+        <a href="#">Vegetales</a>
+        <a href="#">Frutas</a>
+        <a href="#">Hortalizas</a>
+        <a href="#">Carrito <i class="fas fa-shopping-cart"></i></a>
+        <a href="#">Contacto <i class="fas fa-phone"></i></a>
+    </div>
 
-            <!-- Botón de activación del offcanvas -->
-            <button class="btn btn-primary" type="button" data-toggle="offcanvas" data-target="#offcanvasMenu" aria-controls="offcanvasMenu">
-                Menú
-            </button>
+    <!-- Contenido principal -->
+    <div class="content">
+        <header>
+            <h1>Come Bien - Verdulería</h1>
+            <p>¡Bienvenido a Come Bien, tu verdulería de confianza!</p>
+            <p>Dirección: [Dirección de tu verdulería]</p>
+        </header>
 
-            <!-- Offcanvas con opciones de menú -->
-            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasMenu" aria-labelledby="offcanvasMenuLabel">
-                <div class="offcanvas-header">
-                    <h5 class="offcanvas-title" id="offcanvasMenuLabel">Menú</h5>
-                    <button type="button" class="btn-close" data-dismiss="offcanvas" aria-label="Cerrar"></button>
-                </div>
-                <div class="offcanvas-body">
-                    <ul class="list-group">
-                        <li class="list-group-item"><a href="#">Frutas</a></li>
-                        <li class="list-group-item"><a href="#">Verduras</a></li>
-                        <li class="list-group-item"><a href="#">Hortalizas</a></li>
-                        <li class="list-group-item"><a href="#">Vegetales</a></li>
-                    </ul>
+        <!-- Tarjetas de productos -->
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Fruta 1">
+                    <div class="card-body">
+                        <h5 class="card-title">Fruta 1</h5>
+                        <p class="card-text">Descripción del producto.</p>
+                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                    </div>
                 </div>
             </div>
-
-            <!-- Contenido adicional de la página -->
-            <div>
-                <!-- Aquí puedes agregar más contenido, como información sobre productos, ofertas, etc. -->
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Fruta 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Fruta 2</h5>
+                        <p class="card-text">Descripción del producto.</p>
+                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Fruta 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Fruta 3</h5>
+                        <p class="card-text">Descripción del producto.</p>
+                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+
+    <!-- Agrega los enlaces a las fuentes de los íconos que quieras utilizar, como Font Awesome -->
+    <script src="https://kit.fontawesome.com/xxxxxxxxxx.js" crossorigin="anonymous"></script>
+
+    <style>
+        /* Estilo del Sidebar */
+        .sidebar {
+            height: 100%;
+            width: 250px;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: -250px;
+            background-color: #111;
+            padding-top: 20px;
+            color: white;
+            text-align: center;
+            transition: 0.5s;
+        }
+
+        .sidebar a {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 18px;
+            color: white;
+            display: block;
+            transition: 0.3s;
+        }
+
+        .sidebar a:hover {
+            color: #f1f1f1;
+        }
+
+        /* Estilo del Contenido Principal */
+        .content {
+            margin-left: 0;
+            padding: 16px;
+            transition: 0.5s;
+        }
+
+        /* Estilo del botón de abrir/cerrar el sidebar */
+        .btn-dark {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            z-index: 2;
+        }
+    </style>
+
+    <script>
+        function toggleSidebar() {
+            var sidebar = document.getElementById('sidebar');
+            var content = document.querySelector('.content');
+
+            if (sidebar.style.left === '0px') {
+                sidebar.style.left = '-250px';
+                content.style.marginLeft = '0';
+            } else {
+                sidebar.style.left = '0px';
+                content.style.marginLeft = '250px';
+            }
+        }
+    </script>
+
 </body>
 </html>
