--- a/index.html
+++ b/index.html
@@ -1,85 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Come Bien - Verdulería</title>
-
-    <!-- Enlace a la hoja de estilo de Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Enlaces a archivos de estilo personalizados si los tienes -->
-
-    <!-- Enlace a la librería de Bootstrap JS y Popper.js -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</head>
-<body>
-
-    <!-- Botón para abrir/cerrar el sidebar -->
-    <button class="btn btn-dark" onclick="toggleSidebar()">☰ Toggle Sidebar</button>
-
-    <!-- Sidebar -->
-    <div class="sidebar" id="sidebar">
-        <button class="btn btn-light" onclick="toggleSidebar()">✖ Close Sidebar</button>
-        <h2>Come Bien</h2>
-        <p>Verdulería</p>
-        <a href="#">Vegetales</a>
-        <a href="#">Frutas</a>
-        <a href="#">Hortalizas</a>
-        <a href="#">Carrito <i class="fas fa-shopping-cart"></i></a>
-        <a href="#">Contacto <i class="fas fa-phone"></i></a>
-    </div>
-
-    <!-- Contenido principal -->
-    <div class="content">
-        <header>
-            <h1>Come Bien - Verdulería</h1>
-            <p>¡Bienvenido a Come Bien, tu verdulería de confianza!</p>
-            <p>Dirección: [Dirección de tu verdulería]</p>
-        </header>
-
-        <!-- Tarjetas de productos -->
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Fruta 1">
-                    <div class="card-body">
-                        <h5 class="card-title">Fruta 1</h5>
-                        <p class="card-text">Descripción del producto.</p>
-                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Fruta 2">
-                    <div class="card-body">
-                        <h5 class="card-title">Fruta 2</h5>
-                        <p class="card-text">Descripción del producto.</p>
-                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="https://via.placeholder.com/150" class="card-img-top" alt="Fruta 3">
-                    <div class="card-body">
-                        <h5 class="card-title">Fruta 3</h5>
-                        <p class="card-text">Descripción del producto.</p>
-                        <a href="#" class="btn btn-primary">Agregar al carrito</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Agrega los enlaces a las fuentes de los íconos que quieras utilizar, como Font Awesome -->
-    <script src="https://kit.fontawesome.com/xxxxxxxxxx.js" crossorigin="anonymous"></script>
-
     <style>
-        /* Estilo del Sidebar */
+        body {
+            background-color: #f5f5f5;
+            /* Color de fondo del cuerpo */
+        }
+
         .sidebar {
             height: 100%;
             width: 250px;
@@ -87,8 +20,10 @@
             z-index: 1;
             top: 0;
             left: -250px;
-            background-color: #111;
-            padding-top: 20px;
+            background-color: #4CAF50;
+            /* Color del sidebar */
+            padding-top: 30px;
+            /* Aumenta este valor para ajustar la posición vertical del título */
             color: white;
             text-align: center;
             transition: 0.5s;
@@ -101,29 +36,171 @@
             color: white;
             display: block;
             transition: 0.3s;
+            text-align: left;
+            /* Alinea los elementos del menú a la izquierda */
+            margin-bottom: 5px; /* Agregado para separar los botones del sidebar */
+            margin-top: 5px; /* Ajuste del margen superior */
         }
 
         .sidebar a:hover {
             color: #f1f1f1;
         }
 
-        /* Estilo del Contenido Principal */
+        .sidebar-bottom {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+        }
+
+        .sidebar a.btn-primary {
+            width: 100%;
+            margin-top: 5px; /* Ajuste del margen superior */
+        }
+
+        .top-buttons {
+            position: fixed;
+            top: 10px;
+            right: 10px;
+            z-index: 2;
+            display: flex;
+            align-items: center;
+            transition: 0.5s;
+        }
+
+        .top-buttons.sticky {
+            top: 60px; /* O cualquier otra posición que desees al hacer scroll */
+            background-color: white; /* Añade un fondo blanco o del color que desees */
+            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .top-buttons .btn {
+            margin-left: 10px;
+            background-color: #d9fada; /* Asegúrate de que el fondo sea transparente */
+        }
+
         .content {
             margin-left: 0;
             padding: 16px;
             transition: 0.5s;
+            text-align: center;
+            /* Alinea el contenido al centro */
         }
 
-        /* Estilo del botón de abrir/cerrar el sidebar */
         .btn-dark {
             position: fixed;
             top: 10px;
             left: 10px;
             z-index: 2;
         }
+
+        .card {
+            background-color: #d9fada; /* Cambiado a un color verde claro */
+            /* Color de fondo de las tarjetas */
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .card-title {
+            color: #4CAF50;
+            /* Color del título de la tarjeta */
+        }
+
+        .btn-primary {
+            background-color: #4CAF50;
+            /* Color del botón primario */
+            border: 1px solid #4CAF50;
+        }
+
+        .btn-primary:hover {
+            background-color: #45a049;
+            /* Color del botón primario al pasar el mouse */
+            border: 1px solid #45a049;
+        }
+
+        /* Estilo para tarjetas circulares */
+        .circle-card {
+            background-color: #ffffff;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            /* Alineado con las tarjetas cuadradas */
+            overflow: hidden;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            /* Alinea el contenido al centro */
+            position: relative;
+        }
+
+        .circle-card img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+            /* Alineado con las tarjetas cuadradas */
+        }
+
+        .circle-card-content {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            padding: 10px;
+            background-color: rgba(255, 255, 255, 0.6); /* Ajuste de opacidad */
+            /* Ajusta la opacidad según tu preferencia */
+            text-align: left;
+            transition: 0.3s;
+            transform: translateY(0); /* Ajustado para mostrar completamente el contenido */
+        }
+
+        .circle-card-content p {
+            margin: 0;
+            color: #333; /* Color de texto ajustado para mejorar la visibilidad */
+        }
+
+        .featured-products {
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        /* Alinea las tarjetas de productos destacados en línea */
+        .featured-products .row {
+            display: flex;
+            justify-content: center;
+        }
+
+        .featured-products .col-md-3 {
+            text-align: center;
+        }
+
+        .add-to-cart-btn {
+            margin-top: 5px; /* Ajustado para separar el botón del contenido */
+            padding: 5px 10px; /* Ajustado para reducir el tamaño del botón */
+        }
     </style>
 
+    <script src="https://kit.fontawesome.com/xxxxxxxxxx.js" crossorigin="anonymous"></script>
+
     <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var topButtons = document.querySelector('.top-buttons');
+            var prevScrollPos = window.pageYOffset;
+
+            window.onscroll = function () {
+                var currentScrollPos = window.pageYOffset;
+
+                if (prevScrollPos > currentScrollPos) {
+                    topButtons.style.top = "10px";
+                } else {
+                    topButtons.style.top = "-60px";
+                }
+
+                prevScrollPos = currentScrollPos;
+            };
+        });
+
         function toggleSidebar() {
             var sidebar = document.getElementById('sidebar');
             var content = document.querySelector('.content');
@@ -137,6 +214,132 @@
             }
         }
     </script>
+</head>
 
+<body>
+
+    <style>
+        .icon {
+            font-size: 24px; /* Puedes ajustar este valor según tu preferencia */
+            margin-left: 5px; /* Puedes ajustar este valor según tu preferencia */
+        }
+    </style>
+
+    <div class="top-buttons">
+        <button class="btn btn-light">
+            Buscar
+            <span class="bi bi-search icon"></span>
+        </button>
+        <button class="btn btn-light">
+        
+            <i class="bi bi-person-circle icon"></i>
+        </button>
+    </div>
+
+    <button class="btn btn-dark" onclick="toggleSidebar()">☰</button>
+
+    <div class="sidebar" id="sidebar">
+        <p style="margin-bottom: 0px; font-size: 24px;">Verdulería</p>
+        <h2 style="margin-bottom: 30px;">"Come Bien"</h2>
+        <a href="#" class="btn btn-primary" style="font-size: 22px;">Frutas</a>
+        <a href="#" class="btn btn-primary" style="font-size: 22px;">Verduras</a>
+        <a href="#" class="btn btn-primary" style="font-size: 22px;">Hortalizas</a>
+        <div class="sidebar-bottom">
+            <a href="#" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-cart3"></i> Carrito</a>
+            <a href="#" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-telephone"></i> Contacto</a>
+        </div>
+    </div>
+
+    <div class="content">
+        <header>
+            <h1>Verdulería - Come Bien</h1>
+            <p>¡Bienvenido a Come Bien, tu verdulería de confianza!</p>
+            <p>Dirección: Provincia de Guanacaste, Cañas </p>
+        </header>
+
+        <div class="row justify-content-center">
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="imagenes/3.jpg" class="card-img-top" alt="Frutas">
+                    <div class="card-body">
+                        <p class="card-text">Variedad de Frutas</p>
+                        <a href="#" class="btn btn-primary add-to-cart-btn">Frutas</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="imagenes/1.jpg" class="card-img-top" alt="Verduras">
+                    <div class="card-body">
+                        <p class="card-text">Variedad de Verduras</p>
+                        <a href="#" class="btn btn-primary add-to-cart-btn">Verduras</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="card">
+                    <img src="imagenes/2.jpg" class="card-img-top" alt="Hortalizas">
+                    <div class="card-body">
+                        <p class="card-text">Variedad de Hortalizas</p>
+                        <a href="#" class="btn btn-primary add-to-cart-btn">Hortalizas</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Sección de Productos Destacados -->
+        <div class="featured-products">
+            <h2 style="margin-bottom: 20px;">Productos Destacados</h2> <!-- Ajuste de margen inferior -->
+
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="circle-card">
+                        <img src="imagenes/fresas.jpg" alt="Hortalizas">
+                        <div class="circle-card-content">
+                            <p class="card-text">Fresas</p>
+                            <p class="card-text">Precio: ₡4500</p>
+                            <a href="#" class="btn btn-primary add-to-cart-btn">Agregar al carrito</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="circle-card">
+                        <img src="imagenes/papas.jpg" alt="Hortalizas">
+                        <div class="circle-card-content">
+                            <p class="card-text">Papas</p>
+                            <p class="card-text">Precio: ₡2500</p>
+                            <a href="#" class="btn btn-primary add-to-cart-btn">Agregar al carrito</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-3">
+                    <div class="circle-card">
+                        <img src="imagenes/zanahorias.jpg" alt="Hortalizas">
+                        <div class="circle-card-content">
+                            <p class="card-text">Zanahorias</p>
+                            <p class="card-text">Precio: ₡2000</p>
+                            <a href="#" class="btn btn-primary add-to-cart-btn">Agregar al carrito</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
+
 </html>
+
+
+
+
+
+
