--- a/Contacto.html
+++ b/Contacto.html
@@ -60,6 +60,24 @@
             </div>
         </div>
     </div>
+    <div class="row mt-3">
+        <div class="col-md-12">
+            <div class="card" style="background-color: #c1e0c7;">
+                <div class="card-header" style="background-color: #76b752;">
+                    <h3 class="text-center text-white">Descripción de la Tienda</h3>
+                </div>
+                <div class="card-body">
+                    <p>Somos una tienda comprometida con ofrecer productos frescos y de alta calidad. ¡Visítanos y descubre la frescura!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Agregado: Botón para volver al menú principal -->
+    <div class="row mt-3">
+        <div class="col-md-12 text-center">
+            <a href="index.html" class="btn btn-secondary">Volver al Menú Principal</a>
+        </div>
+    </div>
 </div>
 
 <!-- Enlaces a los scripts de Bootstrap y jQuery -->
