--- a/Inicio_Sesion.html
+++ b/Inicio_Sesion.html
@@ -35,6 +35,10 @@
                         <div class="d-grid mb-3">
                             <button type="submit" class="btn btn-success">Iniciar Sesión</button>
                         </div>
+                        <div class="d-grid mb-3">
+                            <!-- Enlace que redirige a la página "Crear_Cuenta.html" -->
+                            <a href="Crear_Cuenta.html" class="btn btn-primary" style="background-color: #45a049;">Agregar cuenta</a>
+                        </div>
                         <div class="text-center">
                             <a href="#" style="color: #76b752;">¿Olvidaste tu contraseña?</a>
                         </div>
@@ -66,3 +70,6 @@
 
 </body>
 </html>
+
+
+
