--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -225,16 +225,16 @@
         }
     </style>
 
-    <div class="top-buttons">
-        <button class="btn btn-light">
-            Buscar
-            <span class="bi bi-search icon"></span>
-        </button>
-        <button class="btn btn-light">
-        
-            <i class="bi bi-person-circle icon"></i>
-        </button>
-    </div>
+<div class="top-buttons">
+    <button class="btn btn-light">
+        Buscar
+        <span class="bi bi-search icon"></span>
+    </button>
+    <!-- Cambiado el botón del usuario a un enlace -->
+    <a href="Inicio_Sesion.html" class="btn btn-light">
+        <i class="bi bi-person-circle icon"></i>
+    </a>
+</div>
 
     <button class="btn btn-dark" onclick="toggleSidebar()">☰</button>
 
@@ -246,7 +246,8 @@
         <a href="#" class="btn btn-primary" style="font-size: 22px;">Hortalizas</a>
         <div class="sidebar-bottom">
             <a href="#" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-cart3"></i> Carrito</a>
-            <a href="#" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-telephone"></i> Contacto</a>
+            <!-- Cambiado el botón de contacto a un enlace -->
+            <a href="Contacto.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-telephone"></i> Contacto</a>
         </div>
     </div>
 
