--- a/Contacto.html
+++ b/Contacto.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="card-body">
                     <h5>Dirección:</h5>
-                    <p>Av. Principal 123,<br> Localidad, País</p>
+                    <p>Provincia de Guanacaste, Cañas</p>
                     
                     <h5>Número de Teléfono:</h5>
                     <p>+1 234 567 890</p>
@@ -43,19 +43,19 @@
                 </div>
                 <div class="card-body">
                     <!-- Google Maps Embed -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.678901234567!2d-70.00000000000001!3d40.00000000000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjLCsDAwJzA0LjAiTiA3MMKwMTAnMzIuMSJX!5e0!3m2!1sen!2sus!4v1616998778911!5m2!1sen!2sus" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3229.0569164969384!2d-85.09309692595271!3d10.42813998970025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f9ffb39ff834b89%3A0xef1ff68a1af788e0!2sVerduleria%20Come%20Bien!5e1!3m2!1sen!2sus!4v1700102372920!5m2!1sen!2sus" width="513" height="320" style="border:0;" allowfullscreen=" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
     </div>
     <div class="row mt-3">
         <div class="col-md-12">
-            <div class="card" style="background-color: #c1e0c7;">
+            <div class="card" style="background-color: #d9fada;">
                 <div class="card-header" style="background-color: #76b752;">
                     <h3 class="text-center text-white">Imagen del Local</h3>
                 </div>
                 <div class="card-body">
-                    <img src="https://via.placeholder.com/600x400" class="img-fluid" alt="Imagen del Local">
+                    <img src="imagenes/verduleria.png" class="img-fluid" alt="Imagen del Local">
                 </div>
             </div>
         </div>
