--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -20,7 +20,7 @@
             z-index: 1;
             top: 0;
             left: -250px;
-            background-color: #4CAF50;
+            background-color: #76b752;
             /* Color del sidebar */
             padding-top: 30px;
             /* Aumenta este valor para ajustar la posición vertical del título */
@@ -110,15 +110,15 @@
         }
 
         .btn-primary {
-            background-color: #4CAF50;
+            background-color: #76b752;
             /* Color del botón primario */
-            border: 1px solid #4CAF50;
+            border: 1px solid #76b752;
         }
 
         .btn-primary:hover {
-            background-color: #45a049;
+            background-color: #45a050;
             /* Color del botón primario al pasar el mouse */
-            border: 1px solid #45a049;
+            border: 1px solid #45a050;
         }
 
         /* Estilo para tarjetas circulares */
