Historial de compras y Reclamaciones
Se ha realizado modificaciones a las páginas

--- a/Reclamaciones.html
+++ b/Reclamaciones.html
@@ -43,13 +43,7 @@
                     <div class="card-body">
                         <form>
                             <div class="mb-3">
-                                <label for="orderNumber" class="form-label">Número de Orden</label>
-                                <input type="text" class="form-control" id="orderNumber"
-                                    placeholder="Ingrese el número de orden">
-                            </div>
-                            <div class="mb-3">
-                                <label for="complaint" class="form-label">Detalle de la Reclamación</label>
-                                <textarea class="form-control" id="complaint" rows="3"
+                                <textarea class="form-control" id="complaint" rows="5"
                                     placeholder="Ingrese los detalles de la reclamación"></textarea>
                             </div>
                             <div class="d-grid">
@@ -60,7 +54,8 @@
                 </div>
 
                 <div class="text-center">
-                    <a href="historial-compras.html" class="btn btn-back btn-secondary">Volver al Historial</a>
+                    <a href="historial_compras.html" class="btn btn-back btn-secondary">Volver</a>
+                    <a href="contacto.html" class="btn btn-back btn-secondary">Contacto</a>
                 </div>
             </div>
         </div>
