--- a/Historial_Compras.html
+++ b/Historial_Compras.html
@@ -26,53 +26,85 @@
             color: white;
         }
 
-        .btn-back {
+        .purchase {
             margin-bottom: 20px;
-        }
-
-        .purchase-link {
-            cursor: pointer;
-            color: #07689f;
-            text-decoration: underline;
         }
     </style>
 </head>
 
 <body>
-
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="card-header">
-                        <h3 class="text-center">Historial de Compras</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group" id="purchaseList">
-                            <li class="list-group-item purchase-link" data-id="1">Compra 1</li>
-                            <li class="list-group-item purchase-link" data-id="2">Compra 2</li>
-                            <li class="list-group-item purchase-link" data-id="3">Compra 3</li>
-                        </ul>
+    <div class="card">
+        <div class="card-header" style="background-color: #76b752;">
+            <h3 class="text-center text-white">Historial de Compras</h3>
+        </div>
+        <div class="card-body">
+            <div class="purchase-list">
+                <div class="purchase">
+                    <h5 class="purchase-title">Pedido #12345</h5>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <ul class="list-group">
+                                <li class="list-group-item">
+                                    <strong>Cebolla</strong>
+                                    <span class="float-end">Cantidad - Precio</span>
+                                </li>
+                                <li class="list-group-item">
+                                    <strong>Zanahoria</strong>
+                                    <span class="float-end">Cantidad - Precio</span>
+                                </li>
+                                <li class="list-group-item">
+                                    <strong>Repollo</strong>
+                                    <span class="float-end">Cantidad - Precio</span>
+                                </li>
+                                <li class="list-group-item">
+                                    <strong>Chile dulce</strong>
+                                    <span class="float-end">Cantidad - Precio</span>
+                                </li>
+                            </ul>
+                            <a href="reclamaciones.html" class="btn btn-primary float-start mt-2">Realizar Reclamación</a>
+                        </div>
+                        <div class="col-md-4">
+                            <p class="purchase-details">
+                                <strong>Fecha del Pedido:</strong> 11/11/2023<br>
+                                <strong>Hora de Compra:</strong> 11:45<br>
+                                <strong>Hora de Entrega:</strong> 12:30<br>
+                                <strong>Monto Total:</strong> Precio Total
+                            </p>
+                        </div>
                     </div>
                 </div>
-                <div class="text-center">
-                    <a href="reclamaciones.html" class="btn btn-back btn-secondary">Realizar Reclamación</a>
+                <div class="purchase">
+                    <h5 class="purchase-title">Pedido #67890</h5>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <ul class="list-group">
+                                <li class="list-group-item">
+                                    <strong>Fresas</strong>
+                                    <span class="float-end">Cantidad - Precio</span>
+                                </li>
+                                <li class="list-group-item">
+                                    <strong>Banano</strong>
+                                    <span class="float-end">Cantidad - Precio</span>
+                                </li>
+                                <li class="list-group-item">
+                                    <strong>Uvas</strong>
+                                    <span class="float-end">Cantidad - Precio</span>
+                                </li>
+                            </ul>
+                            <a href="reclamaciones.html" class="btn btn-primary float-start mt-2">Realizar Reclamación</a>
+                        </div>
+                        <div class="col-md-4">
+                            <p class="purchase-details">
+                                <strong>Fecha del Pedido:</strong> 12/11/2023<br>
+                                <strong>Hora de Compra:</strong> 09:00<br>
+                                <strong>Hora de Entrega:</strong> 10:00<br>
+                                <strong>Monto Total:</strong> Precio Total
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        const purchaseList = document.getElementById('purchaseList');
-        const purchaseLinks = purchaseList.querySelectorAll('.purchase-link');
-        purchaseLinks.forEach(link => {
-            link.addEventListener('click', () => {
-                const purchaseId = link.getAttribute('data-id');
-                window.location.href = `reclamaciones.html?id=${purchaseId}`;
-            });
-        });
-    </script>
 </body>
 
 </html>
