Carrito de compras
Se creo la página del Carrito para realizar la compra y se han hecho algunas modificaciones a la página de Historial de compras

--- a/Historial_Compras.html
+++ b/Historial_Compras.html
@@ -40,7 +40,7 @@
         <div class="card-body">
             <div class="purchase-list">
                 <div class="purchase">
-                    <h5 class="purchase-title">Pedido #12345</h5>
+                    <h5 class="purchase-title">N°. de Pedido: #12345</h5>
                     <div class="row">
                         <div class="col-md-4">
                             <ul class="list-group">
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="purchase">
-                    <h5 class="purchase-title">Pedido #67890</h5>
+                    <h5 class="purchase-title">N°. de Pedido: #67890</h5>
                     <div class="row">
                         <div class="col-md-4">
                             <ul class="list-group">
