--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -245,7 +245,7 @@
         <a href="#" class="btn btn-primary" style="font-size: 22px;">Verduras</a>
         <a href="#" class="btn btn-primary" style="font-size: 22px;">Hortalizas</a>
         <div class="sidebar-bottom">
-            <a href="#" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-cart3"></i> Carrito</a>
+            <a href="carrito.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-cart3"></i> Carrito</a>
             <!-- Cambiado el botón de contacto a un enlace -->
             <a href="Contacto.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-telephone"></i> Contacto</a>
         </div>
