--- a/Reclamaciones.html
+++ b/Reclamaciones.html
@@ -62,6 +62,26 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        function checkSubmission(event) {
+            event.preventDefault();
+
+            const complaintText = document.getElementById('complaint').value;
+
+            if (complaintText.trim() !== '') {
+
+                alert('Reclamación enviada con éxito');
+
+                setTimeout(function() {
+                    window.location.href = 'pagina_principal.html';
+                }, 3000);
+            } else {
+                alert('Por favor, ingrese los detalles de la reclamación');
+            }
+        }
+
+        document.querySelector('form').addEventListener('submit', checkSubmission);
+    </script>
 </body>
 
 </html>
