--- a/Historial_Compras.html
+++ b/Historial_Compras.html
@@ -17,7 +17,7 @@
         }
 
         .card {
-            background-color: #c1e0c7;
+            background-color: #d9fada;
             margin-bottom: 20px;
         }
 
