--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -241,9 +241,9 @@
     <div class="sidebar" id="sidebar">
         <p style="margin-bottom: 0px; font-size: 24px;">Verdulería</p>
         <h2 style="margin-bottom: 30px;">"Come Bien"</h2>
-        <a href="#" class="btn btn-primary" style="font-size: 22px;">Frutas</a>
-        <a href="#" class="btn btn-primary" style="font-size: 22px;">Verduras</a>
-        <a href="#" class="btn btn-primary" style="font-size: 22px;">Hortalizas</a>
+        <a href="Pagina1.html" class="btn btn-primary" style="font-size: 22px;">Frutas</a>
+        <a href="pagina2.html" class="btn btn-primary" style="font-size: 22px;">Verduras</a>
+        <a href="pagina3.html" class="btn btn-primary" style="font-size: 22px;">Hortalizas</a>
         <div class="sidebar-bottom">
             <a href="carrito.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-cart3"></i> Carrito</a>
             <!-- Cambiado el botón de contacto a un enlace -->
@@ -264,7 +264,7 @@
                     <img src="imagenes/3.jpg" class="card-img-top" alt="Frutas">
                     <div class="card-body">
                         <p class="card-text">Variedad de Frutas</p>
-                        <a href="#" class="btn btn-primary add-to-cart-btn">Frutas</a>
+                        <a href="Pagina1.html" class="btn btn-primary add-to-cart-btn">Frutas</a>
                     </div>
                 </div>
             </div>
@@ -274,7 +274,7 @@
                     <img src="imagenes/1.jpg" class="card-img-top" alt="Verduras">
                     <div class="card-body">
                         <p class="card-text">Variedad de Verduras</p>
-                        <a href="#" class="btn btn-primary add-to-cart-btn">Verduras</a>
+                        <a href="pagina2.html" class="btn btn-primary add-to-cart-btn">Verduras</a>
                     </div>
                 </div>
             </div>
@@ -284,7 +284,7 @@
                     <img src="imagenes/2.jpg" class="card-img-top" alt="Hortalizas">
                     <div class="card-body">
                         <p class="card-text">Variedad de Hortalizas</p>
-                        <a href="#" class="btn btn-primary add-to-cart-btn">Hortalizas</a>
+                        <a href="pagina3.html" class="btn btn-primary add-to-cart-btn">Hortalizas</a>
                     </div>
                 </div>
             </div>
