--- a/pagina3.html
+++ b/pagina3.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+    <!-- Cambia la fuente del cuerpo y los títulos a Bootstrap Icons -->
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0; /* Ajuste para eliminar el margen predeterminado del cuerpo */
+            font-family: 'Bootstrap Icons', sans-serif; /* Cambiada a la fuente Bootstrap Icons */
         }
 
         .header {
-            background-color: #28a745;
+            background-color: #76b752;
             color: #fff;
             text-align: center;
             padding: 5px;
-            font-family: "Lilita One";
+            font-family: 'Bootstrap Icons', sans-serif; /* Cambiada a la fuente Bootstrap Icons */
         }
 
         /* Agrega estilos adicionales aquí si es necesario */
@@ -54,7 +56,7 @@
         .card-price {
             font-size: 18px;
             font-weight: bold;
-            color: #08c40b; /* Color azul Bootstrap por defecto */
+            color: #76b752; /* Color azul Bootstrap por defecto */
         }
 
         .col-md-4{
@@ -63,7 +65,7 @@
         }
         
         .btnadd{
-            background-color: #08c40b;
+            background-color: #76b752;
             border-radius: 10px;
             font-family: "Lilita One";
             color: #fff;
@@ -92,7 +94,7 @@
             top: 0;
             left: -250px;
             padding-top: 60px;
-            background-color: #4CAF50;
+            background-color: #76b752;
             color: white;
             text-align: center;
             transition: 0.5s;
@@ -120,12 +122,12 @@
     <button class="toggle" onclick="toggleSidebar()">☰</button>
     <div class="header">
         <div class="sidebar" id="mySidebar">
-            <a href="#">Frutas</a>
-            <a href="#">Verduras</a>
+            <a href="Pagina1.html">Frutas</a>
+            <a href="pagina2.html">Verduras</a>
             <a href="#">Vegetales</a>
-            <a href="#">Hortalizas</a>
-            <a href="#">Carrito</a>
-            <a href="#">Contacto</a>
+            <a href="pagina3.html">Hortalizas</a>
+            <a href="Carrito.html">Carrito</a>
+            <a href="Contacto.html">Contacto</a>
         </div>
         <h1>Hortalizas</h1>
     </div>
