--- a/Pago.html
+++ b/Pago.html
@@ -14,7 +14,7 @@
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
-                <div class="card" style="background-color: #c1e0c7;">
+                <div class="card" style="background-color: #d9fada;">
                     <div class="card-header" style="background-color: #76b752;">
                         <h3 class="text-center text-white">Página de Pago</h3>
                     </div>
