--- a/Reclamaciones.html
+++ b/Reclamaciones.html
@@ -16,7 +16,7 @@
         }
 
         .card {
-            background-color: #c1e0c7;
+            background-color: #d9fada;
             margin-bottom: 20px;
         }
 
