--- a/Pago.html
+++ b/Pago.html
@@ -40,7 +40,7 @@
                             </div>
                             <!-- Agregado: Botón para volver -->
                             <div class="text-center">
-                                <a href="index.html" class="btn btn-secondary">Volver</a>
+                                <a href="Carrito.html" class="btn btn-secondary">Volver</a>
                             </div>
                         </form>
                     </div>
