--- a/pagina3.html
+++ b/pagina3.html
@@ -122,6 +122,7 @@
     <button class="toggle" onclick="toggleSidebar()">☰</button>
     <div class="header">
         <div class="sidebar" id="mySidebar">
+            <a href="Pagina_principal.html" class="btn-home">Página Principal</a>
             <a href="Pagina1.html">Frutas</a>
             <a href="pagina2.html">Verduras</a>
             <a href="#">Vegetales</a>
