--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -10,7 +10,6 @@
     <style>
         body {
             background-color: #f5f5f5;
-            /* Color de fondo del cuerpo */
         }
 
         .sidebar {
@@ -21,9 +20,7 @@
             top: 0;
             left: -250px;
             background-color: #76b752;
-            /* Color del sidebar */
             padding-top: 30px;
-            /* Aumenta este valor para ajustar la posición vertical del título */
             color: white;
             text-align: center;
             transition: 0.5s;
@@ -37,9 +34,8 @@
             display: block;
             transition: 0.3s;
             text-align: left;
-            /* Alinea los elementos del menú a la izquierda */
-            margin-bottom: 5px; /* Agregado para separar los botones del sidebar */
-            margin-top: 5px; /* Ajuste del margen superior */
+            margin-bottom: 5px;
+            margin-top: 5px;
         }
 
         .sidebar a:hover {
@@ -55,7 +51,7 @@
 
         .sidebar a.btn-primary {
             width: 100%;
-            margin-top: 5px; /* Ajuste del margen superior */
+            margin-top: 5px;
         }
 
         .top-buttons {
@@ -69,15 +65,15 @@
         }
 
         .top-buttons.sticky {
-            top: 60px; /* O cualquier otra posición que desees al hacer scroll */
-            background-color: white; /* Añade un fondo blanco o del color que desees */
+            top: 60px;
+            background-color: white;
             border-radius: 5px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         .top-buttons .btn {
             margin-left: 10px;
-            background-color: #d9fada; /* Asegúrate de que el fondo sea transparente */
+            background-color: #d9fada;
         }
 
         .content {
@@ -85,7 +81,6 @@
             padding: 16px;
             transition: 0.5s;
             text-align: center;
-            /* Alinea el contenido al centro */
         }
 
         .btn-dark {
@@ -96,8 +91,7 @@
         }
 
         .card {
-            background-color: #d9fada; /* Cambiado a un color verde claro */
-            /* Color de fondo de las tarjetas */
+            background-color: #d9fada;
             border: 1px solid #ddd;
             border-radius: 10px;
             margin-bottom: 20px;
@@ -106,32 +100,26 @@
 
         .card-title {
             color: #4CAF50;
-            /* Color del título de la tarjeta */
         }
 
         .btn-primary {
             background-color: #76b752;
-            /* Color del botón primario */
             border: 1px solid #76b752;
         }
 
         .btn-primary:hover {
             background-color: #45a050;
-            /* Color del botón primario al pasar el mouse */
             border: 1px solid #45a050;
         }
 
-        /* Estilo para tarjetas circulares */
         .circle-card {
             background-color: #ffffff;
             border: 1px solid #ddd;
             border-radius: 10px;
-            /* Alineado con las tarjetas cuadradas */
             overflow: hidden;
             margin-bottom: 20px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             text-align: center;
-            /* Alinea el contenido al centro */
             position: relative;
         }
 
@@ -139,7 +127,6 @@
             width: 100%;
             height: auto;
             border-radius: 10px;
-            /* Alineado con las tarjetas cuadradas */
         }
 
         .circle-card-content {
@@ -148,16 +135,15 @@
             left: 0;
             right: 0;
             padding: 10px;
-            background-color: rgba(255, 255, 255, 0.6); /* Ajuste de opacidad */
-            /* Ajusta la opacidad según tu preferencia */
+            background-color: rgba(255, 255, 255, 0.6);
             text-align: left;
             transition: 0.3s;
-            transform: translateY(0); /* Ajustado para mostrar completamente el contenido */
+            transform: translateY(0);
         }
 
         .circle-card-content p {
             margin: 0;
-            color: #333; /* Color de texto ajustado para mejorar la visibilidad */
+            color: #333;
         }
 
         .featured-products {
@@ -165,7 +151,6 @@
             margin-top: 20px;
         }
 
-        /* Alinea las tarjetas de productos destacados en línea */
         .featured-products .row {
             display: flex;
             justify-content: center;
@@ -176,8 +161,8 @@
         }
 
         .add-to-cart-btn {
-            margin-top: 5px; /* Ajustado para separar el botón del contenido */
-            padding: 5px 10px; /* Ajustado para reducir el tamaño del botón */
+            margin-top: 5px;
+            padding: 5px 10px;
         }
     </style>
 
@@ -220,8 +205,8 @@
 
     <style>
         .icon {
-            font-size: 24px; /* Puedes ajustar este valor según tu preferencia */
-            margin-left: 5px; /* Puedes ajustar este valor según tu preferencia */
+            font-size: 24px;
+            margin-left: 5px;
         }
     </style>
 
@@ -230,7 +215,6 @@
         Buscar
         <span class="bi bi-search icon"></span>
     </button>
-    <!-- Cambiado el botón del usuario a un enlace -->
     <a href="Inicio_Sesion.html" class="btn btn-light">
         <i class="bi bi-person-circle icon"></i>
     </a>
@@ -246,7 +230,6 @@
         <a href="pagina3.html" class="btn btn-primary" style="font-size: 22px;">Hortalizas</a>
         <div class="sidebar-bottom">
             <a href="carrito.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-cart3"></i> Carrito</a>
-            <!-- Cambiado el botón de contacto a un enlace -->
             <a href="Contacto.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-telephone"></i> Contacto</a>
         </div>
     </div>
@@ -290,9 +273,8 @@
             </div>
         </div>
 
-        <!-- Sección de Productos Destacados -->
         <div class="featured-products">
-            <h2 style="margin-bottom: 20px;">Productos Destacados</h2> <!-- Ajuste de margen inferior -->
+            <h2 style="margin-bottom: 20px;">Productos Destacados</h2>
 
             <div class="row">
                 <div class="col-md-3">
