--- a/pagina4.html
+++ b/pagina4.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0; /* Ajuste para eliminar el margen predeterminado del cuerpo */
+            margin: 0;
         }
 
         .header {
@@ -18,14 +18,13 @@
             font-family: "Lilita One";
         }
 
-        /* Agrega estilos adicionales aquí si es necesario */
         .product-container {
-            max-height: 600px; /* Altura máxima del contenedor con barra de desplazamiento */
+            max-height: 600px;
           
         }
 
         .card {
-            margin-bottom: 20px; /* Espacio entre tarjetas */
+            margin-bottom: 20px;
         }
 
         .card img {
@@ -54,7 +53,7 @@
         .card-price {
             font-size: 18px;
             font-weight: bold;
-            color: #08c40b; /* Color azul Bootstrap por defecto */
+            color: #08c40b;
         }
 
         .col-md-4{
@@ -81,7 +80,7 @@
             color: #fff;
             font-size: 20px;
             cursor: pointer;
-            z-index: 2; /* Asegura que el botón esté en la capa superior */
+            z-index: 2;
         }
 
         .sidebar {
@@ -133,7 +132,6 @@
        <div class="container mt-5">
         <div class="row">
             <div class="col-md-12 product-container">
-                <!-- Contenedor con barra de desplazamiento -->
                 <div class="card">
                     <div class="row no-gutters">
                         <div class="col-md-4">
