--- a/pagina2.html
+++ b/pagina2.html
@@ -6,10 +6,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
-    <!-- Cambia la fuente del cuerpo y los títulos a Bootstrap Icons -->
     <style>
         body {
-            font-family: 'Bootstrap Icons', sans-serif; /* Cambiada a la fuente Bootstrap Icons */
+            font-family: 'Bootstrap Icons', sans-serif;
         }
 
         .header {
@@ -17,17 +16,16 @@
             color: #fff;
             text-align: center;
             padding: 5px;
-            font-family: 'Bootstrap Icons', sans-serif; /* Cambiada a la fuente Bootstrap Icons */
+            font-family: 'Bootstrap Icons', sans-serif;
         }
 
-        /* Agrega estilos adicionales aquí si es necesario */
         .product-container {
-            max-height: 600px; /* Altura máxima del contenedor con barra de desplazamiento */
+            max-height: 600px;
           
         }
 
         .card {
-            margin-bottom: 20px; /* Espacio entre tarjetas */
+            margin-bottom: 20px;
         }
 
         .card img {
@@ -56,7 +54,7 @@
         .card-price {
             font-size: 18px;
             font-weight: bold;
-            color: #76b752; /* Color azul Bootstrap por defecto */
+            color: #76b752;
         }
 
         .col-md-4{
@@ -83,7 +81,7 @@
             color: #fff;
             font-size: 20px;
             cursor: pointer;
-            z-index: 2; /* Asegura que el botón esté en la capa superior */
+            z-index: 2;
         }
 
         .sidebar {
@@ -136,7 +134,6 @@
        <div class="container mt-5">
         <div class="row">
             <div class="col-md-12 product-container">
-                <!-- Contenedor con barra de desplazamiento -->
                 <div class="card">
                     <div class="row no-gutters">
                         <div class="col-md-4">
