--- a/Crear_Cuenta.html
+++ b/Crear_Cuenta.html
@@ -50,6 +50,9 @@
                             <div class="d-grid mb-3">
                                 <button type="submit" class="btn" style="background-color: #45a050; color: #fff;">Crear Cuenta</button>
                             </div>
+                            <div class="text-center">
+                                <a href="Inicio_Sesion.html" style="color: #76b752;">Volver al inicio de sesión</a>
+                            </div>
                             <hr class="my-4">
                             <div class="text-center">
                                 <p>O crear cuenta con:</p>
