--- a/Pagina_Principal.html
+++ b/Pagina_Principal.html
@@ -228,6 +228,7 @@
         <a href="Pagina1.html" class="btn btn-primary" style="font-size: 22px;">Frutas</a>
         <a href="pagina2.html" class="btn btn-primary" style="font-size: 22px;">Verduras</a>
         <a href="pagina3.html" class="btn btn-primary" style="font-size: 22px;">Hortalizas</a>
+        <a href="Historial_Compras.html" class="btn btn-primary" style="font-size: 22px;">Historial de Compras</a>
         <div class="sidebar-bottom">
             <a href="carrito.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-cart3"></i> Carrito</a>
             <a href="Contacto.html" class="btn btn-primary" style="font-size: 22px;"><i class="bi bi-telephone"></i> Contacto</a>
