--- a/Inicio_Sesion.html
+++ b/Inicio_Sesion.html
@@ -7,8 +7,7 @@
     <title>Página de Inicio de Sesión</title>
     <!-- Enlaces a los estilos de Bootstrap y Font Awesome -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-        integrity="sha512-rI5p+ss5wX8G2H6O0zOv0D7yYaz2cseFgihWZ3h5PHWiDS5LXXY2OrON6zfv5uPCeN02+rNA5
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-rI5p+ss5wX8G2H6O0zOv0D7yYaz2cseFgihWZ3h5PHWiDS5LXXY2OrON6zfv5uPCeN02+rNA5
         K3S2f0pPf0km5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
@@ -49,15 +48,24 @@
                                 <a href="Crear_Cuenta.html" class="btn"
                                     style="background-color: #45a050; color: #fff;">Agregar cuenta</a>
                             </div>
+                            <!-- Nueva sección para el botón de volver al menú principal -->
+                            <div class="d-grid mb-3">
+                                <a href="Pagina_Principal.html" class="btn btn-secondary">
+                                    Volver al Menú Principal
+                                </a>
+                            </div>
                             <div class="text-center">
                                 <a href="#" style="color: #76b752;">¿Olvidaste tu contraseña?</a>
                             </div>
+
                         </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
 
     <!-- Enlaces a los scripts de Bootstrap y jQuery -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -81,8 +89,3 @@
 </body>
 
 </html>
-
-
-
-
-
