--- a/Historial_Compras.html
+++ b/Historial_Compras.html
@@ -105,6 +105,13 @@
                 </div>
             </div>
         </div>
+
+            <!-- Agregado: Botón para volver al menú principal -->
+    <div class="row mt-3">
+        <div class="col-md-12 text-center">
+            <a href="Pagina_Principal.html" class="btn btn-secondary">Volver al Menú Principal</a>
+        </div>
+    </div>
 </body>
 
 </html>
