--- a/Contacto.html
+++ b/Contacto.html
@@ -12,13 +12,19 @@
 </head>
 
 <body style="background-color: #e3f2e8;">
-
+    <header>
+        <div class="text-center">
+            <img src="imagenes/Logo.png" alt="Logo de la página" style="width: 100px; height: 100px;">
+            <h2>Come Bien</h2>
+        </div>
+    </header>
     <!-- Agregado: Botón para volver al menú principal -->
     <div class="row mt-3">
         <div class="col-md-12 text-center">
             <a href="Pagina_Principal.html" class="btn btn-secondary">Volver al Menú Principal</a>
+            <!-- Nuevo botón para iniciar sesión como administrador -->
+            <a href="#" class="btn btn-warning">Iniciar Sesión como Administrador</a>
         </div>
-    </div>
     </div>
 
     <div class="container mt-5">
