--- a/Pagina1.html
+++ b/Pagina1.html
@@ -120,6 +120,12 @@
 </head>
 
 <body>
+    <header>
+        <div class="text-center">
+            <img src="imagenes/Logo.png" alt="Logo de la página" style="width: 100px; height: 100px;">
+            <h2>Comer Bien</h2>
+        </div>
+    </header>
     <button class="toggle" onclick="toggleSidebar()">☰</button>
     <div class="header">
         <div class="sidebar" id="mySidebar">
