--- a/Crear_Cuenta.html
+++ b/Crear_Cuenta.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crear Cuenta</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-        integrity="sha512-rI5p+ss5wX8G2H6O0zOv0D7yYaz2cseFgihWZ3h5PHWiDS5LXXY2OrON6zfv5uPCeN02+rNA5
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-rI5p+ss5wX8G2H6O0zOv0D7yYaz2cseFgihWZ3h5PHWiDS5LXXY2OrON6zfv5uPCeN02+rNA5
         K3S2f0pPf0km5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body style="background-color: #e3f2e8;">
-
+    <header>
+        <div class="text-center">
+            <img src="imagenes/Logo.png" alt="Logo de la página" style="width: 100px; height: 100px;">
+            <h2>Come Bien</h2>
+        </div>
+    </header>
     <div class="container mt-5">
         <div class="row justify-content-center">
             <div class="col-md-6">
@@ -24,8 +28,7 @@
                         <form>
                             <div class="mb-3">
                                 <label for="firstName" class="form-label">Nombre</label>
-                                <input type="text" class="form-control" id="firstName"
-                                    placeholder="Ingresa tu nombre">
+                                <input type="text" class="form-control" id="firstName" placeholder="Ingresa tu nombre">
                             </div>
                             <div class="mb-3">
                                 <label for="lastName" class="form-label">Apellidos</label>
@@ -48,7 +51,8 @@
                                     placeholder="Ingresa tu contraseña">
                             </div>
                             <div class="d-grid mb-3">
-                                <button type="submit" class="btn" style="background-color: #45a050; color: #fff;">Crear Cuenta</button>
+                                <button type="submit" class="btn" style="background-color: #45a050; color: #fff;">Crear
+                                    Cuenta</button>
                             </div>
                             <div class="text-center">
                                 <a href="Inicio_Sesion.html" style="color: #76b752;">Volver al inicio de sesión</a>
@@ -72,4 +76,3 @@
 </body>
 
 </html>
-
