--- a/producto.html
+++ b/producto.html
@@ -2,6 +2,12 @@
 <html lang="es">
 
 <head>
+    <header>
+        <div class="text-center">
+            <img src="imagenes/Logo.png" alt="Logo de la página" style="width: 100px; height: 100px;">
+            <h2>Come Bien</h2>
+        </div>
+    </header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agregar Nuevo Producto - Come Bien</title>
@@ -43,17 +49,20 @@
         <form>
             <div class="form-group">
                 <label for="nombre">Nombre del Producto:</label>
-                <input type="text" class="form-control" id="nombre" placeholder="Ingrese el nombre del producto" required>
+                <input type="text" class="form-control" id="nombre" placeholder="Ingrese el nombre del producto"
+                    required>
             </div>
 
             <div class="form-group">
                 <label for="descripcion">Descripción:</label>
-                <textarea class="form-control" id="descripcion" placeholder="Ingrese la descripción del producto" rows="3" required></textarea>
+                <textarea class="form-control" id="descripcion" placeholder="Ingrese la descripción del producto"
+                    rows="3" required></textarea>
             </div>
 
             <div class="form-group">
                 <label for="precio">Precio:</label>
-                <input type="number" class="form-control" id="precio" placeholder="Ingrese el precio del producto" step="0.01" required>
+                <input type="number" class="form-control" id="precio" placeholder="Ingrese el precio del producto"
+                    step="0.01" required>
             </div>
 
             <div class="form-group">
@@ -71,7 +80,10 @@
             </div>
 
             <button type="submit" class="btn btn-primary">Agregar Producto</button>
+            <!-- Botón para volver al menú principal -->
+            <a href="Pagina_Principal.html" class="btn btn-secondary ml-2">Volver al Menú Principal</a>
         </form>
+    </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
@@ -80,5 +92,3 @@
 </body>
 
 </html>
-
-
